Add final mappings

--- a/annotool-rs/src/anno-tool.hbs
+++ b/annotool-rs/src/anno-tool.hbs
@@ -38,7 +38,7 @@
              <p><i>{{wiki_defn}}</i></p>
           </td>
           <td>
-             <input type="checkbox" name="{{wiki_id}}" value="{{wn_id}}" checked="checked"/>
+             <input type="checkbox" name="{{wiki_id}}" value="{{wn_id}}" {{#if good}}checked="checked"{{/if}}/>
           </td>
         </tr>
         {{/each}}
